--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="logo"><a href="#">LOGO></a></div>
       <ul class="menu">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Latest</a></li>
+        <li><a href="http://technik.xn--schchner-2za.de/">Website</a></li>
         <li><a href="#">Offers</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
@@ -25,8 +25,8 @@
       </div>
     </nav>
     <div class="text-content">
-      <h2>Learn To Enjoy,<br>Every Moment Of Your Life</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum facere in nam, officiis aspernatur consectetur aliquid sequi possimus et. Sint.</p>
+      <h2>I'm happy to see you<br></h2>
+      <p>This site is still under development. Feel free to take a look at my GitHub projects</p>
     </div>
     <div class="play-button">
       <span class="play">Play Video</span>
