--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     body {
       background-color: #f0f0f0;
       font-family: Arial, sans-serif;
+        display: flex;
+  justify-content: center;
+  align-items: center;
     }
     
     .container {
