--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     }
     
     .container {
-      display: flex;
       max-width: 70%;
       margin: 0 auto;
       padding: 40px;
@@ -21,6 +20,9 @@
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
       transform: scale(0.95);
       transition: transform 0.3s ease;
+              display: flex;
+  justify-content: center;
+  align-items: center;
     }
     
     .container:hover {
