--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         display: flex;
   justify-content: center;
   align-items: center;
+        height: 100%;
     }
     
     .container {
@@ -21,8 +22,6 @@
       transform: scale(0.95);
       transition: transform 0.3s ease;
               display: flex;
-  justify-content: center;
-  align-items: center;
     }
     
     .container:hover {
@@ -219,7 +218,7 @@
         <img class="profile-img" src="profile_picture.jpg" alt="Profile Picture">
         <h2>About Me</h2>
         <p>I'm a passionate developer with a love for coding and creating innovative solutions. I enjoy working on various projects and exploring new technologies.</p>
-        <p>Feel free to explore my GitHub repositories and see the projects I've been working on.</p>
+        <p>Feel free to explore my GitHub repositories and see the projects I've been working on.<br>🏠 Schächner</p>       
       </div>
     </div>
     <div class="projects">
@@ -248,7 +247,9 @@
       </div>
       <h2 id="overlay-title">About Me</h2>
       <p id="overlay-description">I'm a passionate developer with a love for coding and creating innovative solutions. I enjoy working on various projects and exploring new technologies.</p>
-      <p>Feel free to explore my GitHub repositories and see the projects I've been working on.</p>
+      <p>Feel free to explore my GitHub repositories and see the projects I've been working on.
+      </p>
+
     </div>
   </div>
 
