--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <img class="profile-img" src="profile_picture.jpg" alt="Profile Picture">
         <h2>About Me</h2>
         <p>I'm a passionate developer with a love for coding and creating innovative solutions. I enjoy working on various projects and exploring new technologies.</p>
-        <p>Feel free to explore my GitHub repositories and see the projects I've been working on.<br>🏠 Schächner</p>       
+        <p>Feel free to explore my GitHub repositories and see the projects I've been working on.<br><br>🏢 Schächner</p>       
       </div>
     </div>
     <div class="projects">
