--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 .about {
   position: relative;
   width: auto;
-  height: 200px;
+  height: auto;
   background-color: #f8f8f8;
   border-radius: 8px;
   transition: transform 0.3s;
