--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     .container {
       max-width: 100%;
-        min-height: 100vh; 
+        min-height: 100%; 
       margin: auto;
       padding: 40px;
       background-color: #f0f0f0;
