--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>My GitHub Projects</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
