--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="sidebar">
-      <div class="about" onclick="openOverlay('about')">
-        <img class="profile-img" src="profile_picture.jpg" alt="Profile Picture">
-        <h2>About Me</h2>
-        <p>I'm a passionate developer with a love for coding and creating innovative solutions. I enjoy working on various projects and exploring new technologies.</p>
-        <p>Feel free to explore my GitHub repositories and see the projects I've been working on.<br><br>🏢 Schächner</p>       
-      </div>
+<div class="container">
+  <div class="sidebar">
+    <div class="about" onclick="openOverlay('about')">
+      <img class="profile-img" src="profile_picture.jpg" alt="Profile Picture">
+      <h2>About Me</h2>
+      <p>I'm a passionate developer with a love for coding and creating innovative solutions. I enjoy working on various projects and exploring new technologies.</p>
+      <p>Feel free to explore my GitHub repositories and see the projects I've been working on.<br><br>🏢 Schächner</p>       
     </div>
+<div class="links" onclick="openOverlay('links')">
+  <a href="https://xn--schchner-2za.de/" class="button">🏢 Schächner</a> <br>
+  <a href="https://technik.xn--schchner-2za.de/" class="button">🧑‍💻 Tech Schächner</a> <br>
+ </div>
+  </div>
     <div class="projects">
       <div class="project" onclick="openOverlay('project1')">
         <h2>Project 1</h2>
