--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>My GitHub Projects</title>
-  <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
+   <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
 <div class="container">
