--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--- The code from the script is only here in the index.html file, otherwise Github wouldn't run the script!
+If it runs on your server/device then you don't need the extra script in the index.html file! -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -49,7 +52,8 @@
      </div>
    </div>
 </div>
-
+<!--- The code from the script is only here in the index.html file, otherwise Github wouldn't run the script!
+If it runs on your server/device then you don't need the extra script in the index.html file! -->
 <script>
    // Default username
 const defaultUsername = "schBenedikt";
@@ -224,5 +228,7 @@ getReadmeContent(defaultUsername, defaultUsername)
      event.stopPropagation();
    }
 </script>
+   <!--- The code from the script is only here in the index.html file, otherwise Github wouldn't run the script!
+If it runs on your server/device then you don't need the extra script in the index.html file! -->
 </body>
 </html>
