--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--- The code from the script is only here in the index.html file, otherwise Github wouldn't run the script!
 If it runs on your server/device then you don't need the extra script in the index.html file! -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,25 +10,29 @@ If it runs on your server/device then you don't need the extra script in the ind
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-<div class="container" onclick="preventContainerClick(event)">
+<div class="container">
    <div class="sidebar">
      <div class="about" onclick="openOverlay('about')">
-       <img class="profile-img" src="https://github.com/SchBenedikt/schbenedikt.github.io/blob/main/profile_picture.jpg?raw=true" alt="Profile Picture">
+       <img class="profile-img" id="profile-picture" src="" alt="Profile Picture">
        <h2>About Me</h2>
        <p id="about-description">Loading...</p>
-       <p>Feel free to explore my GitHub repositories and see the projects I've been working on.<br><br>🏢 Schächner</p>
+       <p>Please enter a Github username to continue</p>
      </div>
      <div class="links" onclick="openOverlay('links')">
-       <a href="https://xn--schchner-2za.de/" class="button">🏢 Schächner</a> <br>
-       <a href="https://technik.xn--schchner-2za.de/" class="button">🧑‍💻 Tech Schächner</a> <br>
-       <div id="social-links"></div>
+ <br>
+       <div id="username"></div>
      </div>
+     <div class="update-username">
+       <div class="username-input-container">
+         <input type="text" id="username-input" placeholder="Enter your GitHub username">
+         <button onclick="updateUsername()">Update</button>
+       </div>
+     </div>
+     
    </div>
   
    <div class="projects">
-     <div class="search">
-       <input type="text" id="search-input" placeholder="Search projects..." oninput="filterProjects()">
-     </div>
+
      <!-- Project data is dynamically inserted here -->
    </div>
 </div>
@@ -42,21 +45,22 @@ If it runs on your server/device then you don't need the extra script in the ind
      <h2 id="overlay-title">About Me</h2>
      <div id="overlay-readme"></div>
 
-     <div class="comments">
-       <h3>Comments</h3>
-       <div id="comments-list"></div>
-       <form id="comment-form" onsubmit="submitComment(event)">
-         <input type="text" id="comment-input" placeholder="Enter your comment..." onclick="stopPropagation(event)">
-         <input type="submit" value="Submit" onclick="stopPropagation(event)">
-       </form>
-     </div>
    </div>
 </div>
+
+<script>
+
 <!--- The code from the script is only here in the index.html file, otherwise Github wouldn't run the script!
 If it runs on your server/device then you don't need the extra script in the index.html file! -->
-<script>
    // Default username
-const defaultUsername = "schBenedikt";
+let username = "";
+
+// Function to get the GitHub user data via API
+async function getGitHubUser(username) {
+  const response = await fetch(`https://api.github.com/users/${username}`);
+  const data = await response.json();
+  return data;
+}
 
 // Function to get the GitHub project data via API
 async function getGitHubProjects(username) {
@@ -65,9 +69,10 @@ async function getGitHubProjects(username) {
    return data;
 }
 
-// Function to create the project maps based on the project data
+// Function to create the project cards based on the project data
 function createProjectCards(projects) {
    const projectsContainer = document.querySelector(".projects");
+   projectsContainer.innerHTML = ""; // Clear existing project cards
 
    projects.forEach((project) => {
      const projectCard = document.createElement("div");
@@ -122,7 +127,7 @@ async function openOverlay(project) {
 
      try {
        // Get README.md content
-       const readmeContent = await getReadmeContent(defaultUsername, project.name);
+       const readmeContent = await getReadmeContent(username, project.name);
 
        // Paste the content into the overlay
        const converter = new showdown.Converter();
@@ -143,92 +148,86 @@ function closeOverlay() {
    overlay.classList.remove("active");
 }
 
-// example call of the functions
-const username = defaultUsername;
+// Function to update the username and reload data
+function updateUsername() {
+  const usernameInput = document.getElementById("username-input");
+  const newUsername = usernameInput.value.trim();
 
-getGitHubProjects(username)
-   .then((projects) => {
-     createProjectCards(projects);
-   })
-   .catch((error) => {
-     console.error("Error getting GitHub projects:", error);
-   });
+  if (newUsername === "") {
+    alert("Please enter a valid username.");
+    return;
+  }
 
-// Load README.md file for "About Me".
-getReadmeContent(defaultUsername, defaultUsername)
-   .then((readmeContent) => {
-     const aboutDescription = document.getElementById("about-description");
-     const converter = new showdown.Converter();
-     const htmlContent = converter.makeHtml(readmeContent);
-     aboutDescription.innerHTML = htmlContent;
-   })
-   .catch((error) => {
-     console.error("Error loading README.md file:", error);
-   });
+  username = newUsername;
+  usernameInput.value = ""; // Clear the input field
 
-   // Get the projects container
-   const projectsContainer = document.querySelector(".projects");
+  // Reload data
+  Promise.all([
+    getGitHubUser(username),
+    getGitHubProjects(username),
+    getReadmeContent(username, username)
+  ])
+    .then(([user, projects, aboutContent]) => {
+      createProjectCards(projects);
+      const aboutDescription = document.getElementById("about-description");
+      const converter = new showdown.Converter();
+      const htmlContent = converter.makeHtml(aboutContent);
+      aboutDescription.innerHTML = htmlContent;
 
-   // Filter the projects based on the search input
-   function filterProjects() {
-     const searchInput = document.getElementById("search-input").value.toLowerCase();
-     const projectCards = projectsContainer.getElementsByClassName("project");
+      // Update the user profile picture
+      const profileImg = document.getElementById("profile-picture");
+      profileImg.src = user.avatar_url;
+      profileImg.alt = `${username}'s Profile Picture`;
+    })
+    .catch((error) => {
+      console.error("Error updating username:", error);
+    });
+}
 
-     for (const projectCard of projectCards) {
-       const title = projectCard.querySelector("h2").textContent.toLowerCase();
-       const description = projectCard.querySelector("p").textContent.toLowerCase();
+// Get the projects container
+const projectsContainer = document.querySelector(".projects");
 
-       if (title.includes(searchInput) || description.includes(searchInput)) {
-         projectCard.style.display = "block";
-       } else {
-         projectCard.style.display = "none";
-       }
-     }
-   }
+// Filter the projects based on the search input
+function filterProjects() {
+  const searchInput = document.getElementById("search-input").value.toLowerCase();
+  const projectCards = projectsContainer.getElementsByClassName("project");
 
-   // Function to submit a comment
-   async function submitComment(event) {
-     event.preventDefault();
-     event.stopPropagation();
+  for (const projectCard of projectCards) {
+    const title = projectCard.querySelector("h2").textContent.toLowerCase();
+    const description = projectCard.querySelector("p").textContent.toLowerCase();
 
-     const commentInput = document.getElementById("comment-input");
-     const comment = commentInput.value.trim();
-     commentInput.value = "";
+    if (title.includes(searchInput) || description.includes(searchInput)) {
+      projectCard.style.display = "block";
+    } else {
+      projectCard.style.display = "none";
+    }
+  }
+}
 
-     if (comment === "") {
-       return;
-     }
+// Load initial data
+Promise.all([
+  getGitHubUser(username),
+  getGitHubProjects(username),
+  getReadmeContent(username, username)
+])
+  .then(([user, projects, aboutContent]) => {
+    createProjectCards(projects);
+    const aboutDescription = document.getElementById("about-description");
+    const converter = new showdown.Converter();
+    const htmlContent = converter.makeHtml(aboutContent);
+    aboutDescription.innerHTML = htmlContent;
 
-     const projectId = document.getElementById("overlay-title").textContent;
-     const url = `https://api.github.com/repos/schBenedikt/${projectId}/issues`;
-
-     const response = await fetch(url, {
-       method: "POST",
-       headers: {
-         "Content-Type": "application/json",
-         Authorization: "Bearer YOUR_GITHUB_ACCESS_TOKEN",
-       },
-       body: JSON.stringify({
-         title: "Comment",
-         body: comment,
-       }),
-     });
-
-     if (response.ok) {
-       const commentsList = document.getElementById("comments-list");
-       const commentItem = document.createElement("div");
-       commentItem.classList.add("comment");
-       commentItem.textContent = comment;
-       commentsList.appendChild(commentItem);
-     }
-   }
-
-   // Function to stop event propagation
-   function stopPropagation(event) {
-     event.stopPropagation();
-   }
+    // Set the user profile picture
+    const profileImg = document.getElementById("profile-picture");
+    profileImg.src = user.avatar_url;
+    profileImg.alt = `${username}'s Profile Picture`;
+  })
+  .catch((error) => {
+    console.error("Error loading initial data:", error);
+  }); 
 </script>
    <!--- The code from the script is only here in the index.html file, otherwise Github wouldn't run the script!
 If it runs on your server/device then you don't need the extra script in the index.html file! -->
+
 </body>
 </html>
