--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
   <body>
     <div class="container">
       <div class="sidebar">
-        <div class="about" onclick="openOverlay('about')">
+        <div class="about" onclick="openOverlay('project')">
+          <div class="menu">
+            <ul>
+              <li><a href="https://github.com/${username}">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+  
+            </ul>
+          </div>
           <img
             class="profile-img"
             id="profile-picture"
