--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
               <li><a href="https://github.com/${username}">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
-  
             </ul>
           </div>
           <img
@@ -31,9 +30,7 @@
           <h2>About Me</h2>
           <p id="about-description"></p>
           <!-- Display the text when no user is displayed -->
-          <p id="enter-username-text">
-            
-          </p>
+          <p id="enter-username-text"></p>
 
           <!-- Display status of GitHub API -->
           <div id="github-api-status">Checking GitHub API status...</div>
@@ -69,6 +66,18 @@
         <div id="overlay-readme"></div>
       </div>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+
+    <!-- GitHub Search -->
+
+    <h1 class="gh-search">Github User Search</h1>
+    <textarea
+      class="gh-search-bar"
+      id="searchInput"
+      placeholder="Enter a word"
+    ></textarea>
+    <ul class="gh-search-list" id="userList"></ul>
+
+    <script type="text/javascript" src="js/predict.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
