Fixed the Home Button
Just a little change to make the home button function.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="about" onclick="openOverlay('project')">
           <div class="menu">
             <ul>
-              <li><a href="https://github.com/${username}">Home</a></li>
+              <li><a id="home">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
