--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
               <li><a id="home">Home</a></li>
               <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+      <li><a id="contact-button" href="#">Contact</a></li>
             </ul>
           </div>
           <img
